--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2,5 +2,71 @@
     max-width: 100% !important;
 }
 .header--market-place-2 .navigation{
-    background-color: #eff1f2;
+    background-color: #eff1f2 !important;
+}
+.ps-my-account{
+    background-color: #fff !important;
+}
+
+.header--market-place-2 .menu > li > a:hover {
+    color: #fcb800 !important;
+}
+.ps-block--category-2 {
+    align-items: flex-end;
+    justify-content: center;
+    height: 300px;
+    position: relative;
+    background-size: cover;
+    border:none;
+    cursor: pointer;
+    text-align:center;
+    & h4{
+        z-index: 100;
+        font-weight: 900 !important;
+        font-size: 22px !important;
+        font-family: "Cairo";
+        color: #fff !important;
+        transition: all .3s ease-in-out;
+    }
+    & a{
+        z-index: 100;
+    }
+    &:hover{
+        h4 , a {
+            transform: translateY(-10px) !important;
+        }
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        background: -o-linear-gradient(269deg, rgba(255,255,255,0), rgba(255,255,255,0.37) 37%, #474747);
+        background: linear-gradient(181deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.37) 37%,#474747);
+        z-index: 1;
+        pointer-events: none;
+        mix-blend-mode: multiply;
+    }
+    
+}
+.ps-product .ps-product__title{
+    color:#333;
+    font-family: Cairo;
+}
+.header--standard .ps-form--quick-search button{
+    background-color: $color-1st;
+}
+
+.ps-block--countdown-deal figure{
+    background-color: $color-1st;
+
+}
+.flex{
+    display: flex;
+}
+.cairo{
+    font-family: "Cairo";
 }
